deel-test/templates/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: deel-test
  labels:
    app: deel-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: deel.gabpp.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deel-test--svc
                port:
                  number: 80
